test/files/neg/macro-invalidsig-tparams-badtype.check
Macros_Test_2.scala:2: error: macro implementation has incompatible shape:
 required: (c: scala.reflect.macros.Context): c.Expr[Any]
 found   : (c: scala.reflect.macros.Context)(U: c.universe.Type): Nothing
number of parameter sections differ
  def foo[U] = macro Impls.foo[U]
                           ^
one error found
